# nimblz

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
examples/: CMakeLists.txt  central.c  dual_role.c  peripheral.c
include/nimblz/: advertise.h  connection.h  gatt_client.h  gatt_server.h  nimblz.h  types.h  watchdog.h
src/: advertise.c  connection.c  dbus_util.c  dbus_util.h  gatt_client.c  gatt_server.c  nimblz.c  watchdog.c
src/quirks/: broadcom.c  intel.c  quirks.c  quirks.h  realtek.c
test/: CMakeLists.txt  mock_dbus.c  test_advertise.c  test_connection.c  test_gatt_server.c  test_watchdog.c
yocto/: nimblz.bb
